# fp

./: .gitignore  README.md  data.json  fogsoft.py  pyproject.toml
engine/fogsoft/: pipelines.py  scraper_table_lots.py
