[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.9.1"
Scrapy = "^2.4.1"
pymongo = "^3.11.3"
click = "^7.1.2"
colorama = "^0.4.4"
requests = "^2.25.1"
install = "^1.3.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fogsoft = "fogsoft:choose_platform"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
